--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "xlogo-1.0.4.tar.bz2": 8087ca621c48506b26bb2cf3219a957b31537267
+  xlogo-1.0.5.tar.bz2: f025a0ad30c45cbec1c2f3b1610bff94fb4e9f33
