--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  xlogo-1.0.5.tar.bz2: f025a0ad30c45cbec1c2f3b1610bff94fb4e9f33
+  xlogo-1.0.6.tar.xz: 516def17b5afc26680b1b7286d4bdf3403e5a851
